--- a/src/app.html
+++ b/src/app.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="">
 
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
-	<meta name="color-scheme" content="dark light" />
+	<meta name="color-scheme" content="light dark" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat&display=swap"
-		rel="stylesheet" />
 	<!-- Material Icons -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	<!-- Roboto -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
 	<!-- Roboto Mono -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
-	<!-- SMUI Styles -->
-	<link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)" />
-	<link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
+	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat&display=swap"
+		rel="stylesheet" />
+	<!-- Material Icons -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 	%sveltekit.head%
 </head>
